added tagging for events and updated styling

--- a/admin/app/assets/stylesheets/admin_theme/theme_colors.css
+++ b/admin/app/assets/stylesheets/admin_theme/theme_colors.css
@@ -26,7 +26,7 @@ body {
   left: 25px;
 }
 .sidebar ul li a.active {
-  background-color: #0f5d88;
+  background-color: #09334c;
 }
 .sidebar ul li a:hover {
   background-color: #09334c;
