--- a/event/app/views/dm_event/admin/workshop_prices/index.html.erb
+++ b/event/app/views/dm_event/admin/workshop_prices/index.html.erb
@@ -7,23 +7,23 @@
 <%= render partial: 'dm_event/admin/workshops/header_menu' %>
 
 <% toolbar = toolbar_btn(icons(:new), new_admin_workshop_workshop_price_path(@workshop), title: 'New Forum', class: "btn btn-xs btn-default") %>
-<%= panel body: false, title: 'Workshop Prices', toolbar: toolbar do %>
+<%= panel body: false, title: icon_label(:money, 'Workshop Prices'), toolbar: toolbar do %>
   <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_event.admin_workshop_price_sort_path %>">
     <thead>
       <tr>
-        <th class="sort_handle"></th>
-        <th>Description</th>
+        <th></th>
         <th width="50">Price</th>
+        <th>Description</th>
       </tr>
     </thead>
     <tbody>
       <% @workshop_prices.each do |workshop_price| %>
         <tr class="item" data-item_id="<%= workshop_price.id %>">
           <td class="sort_handle"></td>
+          <td><%= humanized_money_with_symbol workshop_price.price %></td>
           <td>
             <%= link_to workshop_price.price_description, [:edit, :admin, workshop_price] %>
           </td>
-          <td><%= humanized_money_with_symbol workshop_price.price %></td>
         </tr>
       <% end %>
     </tbody>
