--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -40,11 +40,11 @@
       <table id="registration_table" class="table table-striped table-bordered" data-source="<%= dm_event.admin_workshop_url(@workshop, duplicates: params[:duplicates]) %>">
         <thead>
           <tr>
-            <th width=20></th>
-            <th width=50>Receipt</th>
+            <th width=20 style="padding-left: 5px; padding-right: 5px;"></th>
+            <th width=70 style="white-space:nowrap"><span>Receipt</span></th>
             <th>Name</th>
             <th width=25>Balance</th>
-            <th class="date">Registered</th>
+            <th class="date" style="white-space:nowrap">Registered</th>
             <th class="date">Last Login</th>
           </tr>
         </thead>
