--- a/forum/app/views/dm_forum/admin/dashboard/_widget_forum_comments.html.erb
+++ b/forum/app/views/dm_forum/admin/dashboard/_widget_forum_comments.html.erb
@@ -1,6 +1,6 @@
 <% comment_day  = params[:comment_day].to_i %>
 <% date_range   = (Date.today - comment_day.day).midnight..(Date.today - (comment_day - 1).day).midnight %>
-<% comments     = Comment.where(commentable_type: ForumTopic, created_at: date_range).order('created_at DESC') %>
+<% comments     = Comment.where(commentable_type: 'ForumTopic', created_at: date_range).order('created_at DESC') %>
 <% title = comment_day == 0 ? 'Today\'s Forum Comments' : comment_day == 1 ? 'Yesterday\'s Forum Comments' : "Forum Comments #{comment_day} days ago" %>
 <% content_for :forum_title_toolbar do %>
   <%= link_to icons('fa fa-arrow-left'), dm_forum.admin_widget_forum_comments_path(comment_day: comment_day + 1), remote: true, class: 'btn btn-xs btn-default' %>
